# credentials-fetcher

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config  README-NOGRPC.MD  README.md  code_coverage_using_gcov.sh  suppressions.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  cppcheck.yml  devskim.yml
api/: CMakeLists.txt
api/src/: credentials_fetcher_krbsecret_to_kubesecret.py  gmsa_service.cpp
api/tests/: CMakeLists.txt  contoso_webapp01.json  contosoeks_webapp01.json  gmsa_service_test.cpp  gmsa_test_cli.sh  gmsa_test_client.cpp  kubeconfig.json  pod_with_secret.yaml  secret1.yaml  secret2.yaml
api/tests/stress_test_scripts/: create_service_accounts.ps1  credspec_stress_test.txt
auth/: CMakeLists.txt
auth/kerberos/: CMakeLists.txt
auth/kerberos/src/: credentials_fetcher_krbsecret_to_kubesecret.py  krb.cpp  kube2krb.py
auth/kerberos/src/utf16_decode/: Program.cs  build-using-csc.sh  utf16_decode.csproj
auth/kerberos/tests/: contoso_webapp03.json  kerberos_test.cpp  kubeconfig.json
auth/kinit_client/: README  k5-int.h  kinit.c  kinit_kdb.c  osconf.h
cdk/: .gitignore  README.md  app.py  credspec_template.json  data.json  gmsa.ps1  requirements-dev.txt  requirements.txt  start_stack.sh
cdk/Docker/: Dockerfile  build.sh
cdk/ECS_task_definition/: CredentialsfetcherADStackCredentialsFetcherTaskDefinitiontemplate.json  README.txt
cdk/cdk/: cdk_stack.py
cdk/cdk-domainless-mode/: app.py  cleanup.py  copy_credspecs_and_create_task_defs.py  data.json  gmsa.ps1  run_tasks.py  start_stack.sh
cdk/cdk-domainless-mode/cdk/: cdk_stack.py
common/: constants.h  daemon.h  util.hpp
config/: CMakeLists.txt  config.h.in
config/src/: config.cpp  krb5.conf
credentials-fetcher/: CMakeLists.txt  README.md
credentials-fetcher/api/: CMakeLists.txt
credentials-fetcher/api/src/: CMakeLists.txt  cf-service.h  gmaapi.cpp  gmsa_service.cpp
credentials-fetcher/api/tests/: CMakeLists.txt  gmsa_test_cli.sh  gmsa_test_client.cpp
credentials-fetcher/api/tests/stress_test_scripts/: credspec_stress_test.txt
credentials-fetcher/auth/: CMakeLists.txt
credentials-fetcher/auth/kerberos/: CMakeLists.txt
credentials-fetcher/auth/kerberos/src/: CMakeLists.txt  cf-krb.h  krb.cpp  os.h
credentials-fetcher/auth/kerberos/tests/: CMakeLists.txt
credentials-fetcher/cache/: CMakeLists.txt
credentials-fetcher/cache/src/: CMakeLists.txt  cache.cpp  cf-cache.h
credentials-fetcher/cache/tests/: CMakeLists.txt
credentials-fetcher/common/: CMakeLists.txt  cf-logger.h  daemon.h  krb-ticket-info.h
credentials-fetcher/config/: CMakeLists.txt  config.json
credentials-fetcher/config/src/: config.cpp
credentials-fetcher/config/tests/: CMakeLists.txt  config_test.cpp
credentials-fetcher/configuration/: CMakeLists.txt
credentials-fetcher/configuration/src/: CMakeLists.txt
credentials-fetcher/configuration/tests/: CMakeLists.txt
credentials-fetcher/daemon/: CMakeLists.txt
credentials-fetcher/daemon/src/: CMakeLists.txt  daemon.cpp  daemon.h
credentials-fetcher/daemon/tests/: CMakeLists.txt
credentials-fetcher/logger/: CMakeLists.txt
credentials-fetcher/logger/tests/: CMakeLists.txt
credentials-fetcher/logging/: CMakeLists.txt
credentials-fetcher/logging/src/: CMakeLists.txt  logging.cpp
credentials-fetcher/meta_data/: CMakeLists.txt
credentials-fetcher/meta_data/src/: meta_data.cpp
credentials-fetcher/meta_data/tests/: CMakeLists.txt
credentials-fetcher/metadata/: CMakeLists.txt
credentials-fetcher/metadata/src/: metadata.cpp
credentials-fetcher/metadata/tests/: CMakeLists.txt  metadata_invalid_sample.json  metadata_sample.json  metadata_test.cpp
credentials-fetcher/openldap/: CMakeLists.txt  get_openldap.sh
credentials-fetcher/package/: build-rpms.sh  credentials-fetcher-fedora.spec  credentials-fetcher.spec
credentials-fetcher/protos/: credentialsfetcher.proto
credentials-fetcher/renewal/: CMakeLists.txt
credentials-fetcher/renewal/src/: renewal.cpp
credentials-fetcher/renewal/tests/: CMakeLists.txt
credentials-fetcher/scripts/: build-rpms.sh  credentials-fetcher.spec
credentials-fetcher/scripts/systemd/: credentials-fetcher.service
credentials-fetcher/timer/: CMakeLists.txt
credentials-fetcher/timer/src/: CMakeLists.txt  cf-timer.h  timer.cpp
credentials-fetcher/timer/tests/: CMakeLists.txt
daemon/: CMakeLists.txt  credentials_fetcher.conf
daemon/src/: daemon.cpp  gmsa_minimal_service.cpp
dependencies/: CMakeLists.txt
doc/: eks_smb_use_case.md
docker/: 0001-Initial-patch-no-grpc-mode.patch  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-22.04
docs/: cf_gmsa_ou.md
documentation/: EKS.md
flatpak/: make_credentials_fetcher_flatpak.sh  org.flatpak.Credentials-fetcher.yml  run_credentials_fetcher_flatpak.sh
metadata/: CMakeLists.txt
metadata/src/: metadata.cpp
metadata/tests/: metadata_sample.json  metadata_test.cpp
no-grpc-mode/: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.MD  build_on_al2.sh  cscope.out
no-grpc-mode/auth/: CMakeLists.txt
no-grpc-mode/auth/kinit_client/: CMakeLists.txt  autoconf.h  k5-int.h  kinit.c
no-grpc-mode/common/: CMakeLists.txt  daemon.h
no-grpc-mode/config/: config.h.in
no-grpc-mode/config/src/: config.cpp
no-grpc-mode/daemon/: CMakeLists.txt
no-grpc-mode/daemon/src/: daemon.cpp  gmsa_minimal_service.cpp
no-grpc-mode/metadata/: CMakeLists.txt
no-grpc-mode/metadata/src/: metadata.cpp
no-grpc-mode/package/: credentials-fetcher.spec
no-grpc-mode/renewal/: CMakeLists.txt
no-grpc-mode/sample_credspec/: sample_credspec.json  sample_credspec2.json
package/: credentials-fetcher-fedora.spec  credentials-fetcher-no-grpc.spec  credentials-fetcher.spec
protos/: credentialsfetcher.proto
renewal/src/: renewal.cpp
renewal/tests/: renewal_test.cpp
rpm/: credentials-fetcher-1.3.61-0.amzn2023.x86_64.rpm  credentials-fetcher-no-grpc-1.3.2-0.amzn2.x86_64.rpm  credentials-fetcher-no-grpc-debuginfo-1.3.2-0.amzn2.x86_64.rpm
sample_credspec/: CMakeLists.txt
scripts/systemd/: credentials-fetcher.service
(+3 files in other folders)
